--- a/Ohjelmisto2_projekti/Templates/game.html
+++ b/Ohjelmisto2_projekti/Templates/game.html
@@ -1,11 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-    <link rel="stylesheet" href="../Styles/styles_game.css">
-</head>
-<body>
-
-</body>
-</html>
+{% extends 'templates/index.html' %}
