--- a/Ohjelmisto2_projekti/Templates/question.html
+++ b/Ohjelmisto2_projekti/Templates/question.html
@@ -1,11 +1,3 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-    <link rel="stylesheet" href="../Styles/styles_question.css">
-</head>
-<body>
+{% extends 'templates/index.html' %}
 
-</body>
-</html>
+{% block content %}
