--- a/Ohjelmisto2_projekti/Styles/styles.css
+++ b/Ohjelmisto2_projekti/Styles/styles.css
@@ -28,7 +28,7 @@ header {
 
 aside {
     width: 50px; /* Adjust the width as needed */
-    height: 100px; /* Adjust the height as needed */
+    height: 100px;
     background-color: #ecf0f1;
     margin: 10px;
 }
