--- a/Ohjelmisto2_projekti/atc_web/styles.css
+++ b/Ohjelmisto2_projekti/atc_web/styles.css
@@ -70,35 +70,45 @@ select {
     cursor: pointer;
 }
 
-#stats_box {
-    width: 30vh;
-    height: 35vh;
-    background-color: white;
-    position: absolute;
+
+.sidebar {
+    display: flexbox;
     z-index: 999;
+    position: absolute;
     top: 0;
     margin-left: 3vh;
     margin-top: 12vh;
-    border-radius: 12%;
-    justify-content: center;
-    display: flex;
 }
 
-#weather_box {
+
+#stats-box {
     width: 30vh;
     height: 35vh;
-    background-color: white;
-    position: absolute;
-    z-index: 999;
+    background-color: lightskyblue;
+    color: black;
     top: 0;
     margin-left: 3vh;
-    margin-top: 53vh;
     border-radius: 12%;
-    justify-content: center;
     display: flex;
+    flex-direction: column;
+    text-align: center;
 }
 
-#header {
+#weather-box {
+    width: 30vh;
+    height: 35vh;
+    background-color: lightskyblue;
+    top: 0;
+    margin-left: 3vh;
+    margin-top: 5vh;
+    border-radius: 12%;
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+} 
+
+
+#game-title {
     position: absolute;
     top: 0;
     left: 0;
@@ -107,20 +117,4 @@ select {
     margin-right: auto;
     z-index: 999;
     width: 50%;
-}
-
-#stats_text{
-    position: absolute;
-    height: 70px;
-    width: auto;
-    display: flex;
-    justify-content: center;
-}
-
-#weather_text{
-    position: absolute;
-    height: 70px;
-    width: auto;
-    display: flex;
-    justify-content: center;
 }
