--- a/Ohjelmisto2_projekti/atc_web/styles.css
+++ b/Ohjelmisto2_projekti/atc_web/styles.css
@@ -72,7 +72,6 @@ select {
 
 
 .sidebar {
-    display: flexbox;
     z-index: 999;
     position: absolute;
     top: 0;
@@ -123,4 +122,30 @@ select {
     z-index: 999;
     width: 50%;
     pointer-events: none;
+}
+
+.info-button{
+    display: flex;
+    margin-left: 6vh;
+    cursor: pointer;
+}
+
+
+.popup {
+    display: none;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    padding: 20px;
+    background-color: #fff;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+    z-index: 999;
+}
+
+.closeButton {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    cursor: pointer;
 }
