--- a/Ohjelmisto2_projekti/atc_web/styles.css
+++ b/Ohjelmisto2_projekti/atc_web/styles.css
@@ -179,4 +179,28 @@ select {
     animation: fadeOut 1s ease-out forwards;
 }
 
+.info-button{
+    display: flex;
+    margin-left: 120vh;
+    cursor: pointer;
+    margin-bottom: 15vh;
+}
 
+.popup {
+    display: none;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    padding: 20px;
+    background-color: #fff;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+    z-index: 999;
+}
+
+.closeButton {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    cursor: pointer;
+}
