--- a/Ohjelmisto2_projekti/atc_web/styles.css
+++ b/Ohjelmisto2_projekti/atc_web/styles.css
@@ -179,23 +179,24 @@ select {
     animation: fadeOut 1s ease-out forwards;
 }
 
-.info-button{
+.info-button {
     display: flex;
-    margin-left: 120vh;
+    position: absolute;
     cursor: pointer;
     margin-bottom: 15vh;
+    z-index: 1000;
 }
 
 .popup {
     display: none;
-    position: fixed;
+    position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
     padding: 20px;
     background-color: #fff;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
-    z-index: 999;
+    z-index: 1000;
 }
 
 .closeButton {
