--- a/Ohjelmisto2_projekti/atc_web/styles.css
+++ b/Ohjelmisto2_projekti/atc_web/styles.css
@@ -71,13 +71,18 @@ select {
 }
 
 .sidebar {
-    display: flexbox;
+    flex: 1;
+    display: flex;
+    flex-direction: column;
     z-index: 999;
     position: absolute;
     top: 0;
     margin-left: 3vh;
+    width: 30vh;
+    height: 100%;
     /* margin-top: 12vh; */
 }
+
 
 #stats-box h3 {
     padding: 0;
@@ -85,14 +90,34 @@ select {
     margin: 0;
 }
 
-#stats-box {
-    width: 30vh;
-    height: 30vh;
-    background-color: lightskyblue;
-    color: black;
-    top: 0;
+#info-box {
+    height: 25%; 
+    background-color: rgba(135, 206, 250, 0.6);
     margin-top: 1vh;
     margin-left: 3vh;
+    border-radius: 12%;
+    display: flex;
+    flex-direction: column;
+}
+
+.info-button {
+    cursor: pointer;
+    margin: auto;
+    background-color: rgb(92, 165, 210);
+    border-radius: 40%;
+    padding: 15%;
+}
+
+.info-button:hover {
+    background-color: white;
+}
+
+#stats-box {
+    height: 25%; 
+    background-color: rgba(135, 206, 250, 0.6);
+    color: black;
+    margin-left: 3vh;
+    margin-top: 1vh;
     border-radius: 12%;
     display: flex;
     flex-direction: column;
@@ -100,10 +125,8 @@ select {
 }
 
 #weather-box {
-    width: 30vh;
-    height: 30vh;
-    background-color: lightskyblue;
-    top: 0;
+    height: 25%; 
+    background-color: rgba(135, 206, 250, 0.6);
     margin-left: 3vh;
     margin-top: 1vh;
     border-radius: 12%;
@@ -113,12 +136,11 @@ select {
 } 
 
 .scoreboard-box {
-    width: 30vh;
-    height: 30vh;
-    background-color: lightskyblue;
-    top: 0;
+    width: auto;
+    height: 25%;
+    background-color: rgba(135, 206, 250, 0.6);
     margin-left: 3vh;
-    margin-top: 2vh;
+    margin-top: 1vh;
     border-radius: 12%;
     display: flex;
     flex-direction: column;
@@ -179,13 +201,6 @@ select {
     animation: fadeOut 1s ease-out forwards;
 }
 
-.info-button {
-    display: flex;
-    position: absolute;
-    cursor: pointer;
-    margin-bottom: 15vh;
-    z-index: 1000;
-}
 
 .popup {
     display: none;
@@ -199,7 +214,7 @@ select {
     z-index: 1000;
 }
 
-.closeButton {
+#closeButton {
     position: absolute;
     top: 10px;
     right: 10px;
