--- a/Ohjelmisto2_projekti/atc_web/styles.css
+++ b/Ohjelmisto2_projekti/atc_web/styles.css
@@ -189,19 +189,21 @@ select {
     50% { opacity: 1; }
 }
 
+div:not(#starterWrapper) {
+    pointer-events: none;
+  }
+
 #nameForm {
     position: absolute;
-    top: 25%;
+    top: 50%;
     left: 50%;
     background-color: lightskyblue;
     transform: translate(-50%, -50%);
     padding: 20px;
     border-radius: 10px;
-    z-index: 1000;
-    display: block;
+    z-index: 1000;    
     pointer-events: auto;
     align-items: center;
-    text-align: center;
     animation: fadeOut 1s ease-out forwards;
 }
 
@@ -231,6 +233,10 @@ select {
 .leaflet-popup-content-wrapper {
     margin: 0 !important;
     background-color: lightskyblue;
+}
+
+.leaflet-popup-content p {
+    font-weight: bold;
 }
 
 
